# stan

python/: CMakeLists.txt  README.md
python/stan/wrappers/: callbacks.cpp  model.cpp  stan.cpp
src/stan/model/: finite_diff_grad.hpp  gradient.hpp  log_prob.hpp  log_prob_grad.hpp  log_prob_propto.hpp  model_base.hpp  model_base_interface.hpp  model_functional.hpp
src/stan/services/optimize/: newton.hpp
src/stan/services/util/: initialize.hpp
src/test/lang/reject/: reject_helper.hpp
src/test/unit/model/: gradient_test.cpp  log_prob_grad_test.cpp  log_prob_propto_test.cpp  log_prob_test.cpp  model_base_interface_test.cpp  model_functional_test.cpp  test_model_interface_rosenbrock.hpp
src/test/unit/services/optimize/: newton_test.cpp
src/test/unit/services/sample/: hmc_nuts_diag_e_adapt_model_base_interface_test.cpp
